--- a/html/qa/ask.html
+++ b/html/qa/ask.html
@@ -419,7 +419,7 @@
 		} else if (step == 2) {
 			if (description.value.length &lt; 144) {
 				description.focus();
-				err3.textContent = 'Question description must be at least 144 characters long.';
+				err3.textContent = 'Question description must be at least 144 characters long. Could you add more detail?';
 				return;
 			}
 			if (question.value.length &lt; 12) {
