--- a/html/chat/room.html
+++ b/html/chat/room.html
@@ -195,7 +195,8 @@ $textarea
 			sig.appendChild(permalink);
 			var currentNode = div;
 			while (!sig.parentNode) {
-				if (!currentNode.lastChild.lastChild || currentNode.lastChild.lastChild.tagName == 'blockquote') currentNode.appendChild(sig);
+				console.log(currentNode.lastChild.lastChild);
+				if (!currentNode.lastChild.lastChild || currentNode.lastChild.tagName == 'blockquote' || currentNode.lastChild.tagName == 'code') currentNode.appendChild(sig);
 				else currentNode = currentNode.lastChild;
 			}
 			var tCtrls = ctrls.cloneNode(true);
@@ -234,7 +235,7 @@ $textarea
 			var currentNode = msg;
 			sig.parentNode.removeChild(sig);
 			while (!sig.parentNode) {
-				if (!currentNode.lastChild.lastChild || currentNode.lastChild.lastChild.tagName == 'blockquote') currentNode.appendChild(sig);
+				if (!currentNode.lastChild.lastChild || currentNode.lastChild.lastChild.tagName == 'blockquote' || currentNode.lastChild.lastChild.tagName == 'code') currentNode.appendChild(sig);
 				else currentNode = currentNode.lastChild;
 			}
 			msg.appendChild(msgCtrls);
@@ -294,7 +295,11 @@ $textarea
 				permalink.appendChild(agot(data.time));
 				permalink.href = '#' + (div.id = data.id);
 				sig.appendChild(permalink);
-				div.appendChild(sig);
+				var currentNode = msg;
+				while (!sig.parentNode) {
+					if (!currentNode.lastChild.lastChild || currentNode.lastChild.lastChild.tagName == 'blockquote' || currentNode.lastChild.lastChild.tagName == 'code') currentNode.appendChild(sig);
+					else currentNode = currentNode.lastChild;
+				}
 				var tCtrls = ctrls.cloneNode(true);
 				tCtrls.children[0].onclick = ctrlsStar.onclick;
 				tCtrls.children[1].onclick = ctrlsLink.onclick;
@@ -357,7 +362,11 @@ $textarea
 				permalink.appendChild(agot(data.time));
 				permalink.href = '#' + data.id;
 				sig.appendChild(permalink);
-				div.appendChild(sig);
+				var currentNode = div;
+				while (!sig.parentNode) {
+					if (!currentNode.lastChild.lastChild || currentNode.lastChild.lastChild.tagName == 'blockquote' || currentNode.lastChild.lastChild.tagName == 'code') currentNode.appendChild(sig);
+					else currentNode = currentNode.lastChild;
+				}
 				li.appendChild(div);
 				if (starwall.firstChild) starwall.insertBefore(li, starwall.firstChild);
 				else starwall.appendChild(li);
