Incomplete CSP implementation

--- a/html/learn/lesson.html
+++ b/html/learn/lesson.html
@@ -20,7 +20,8 @@
 	<textarea id="html">$html</textarea>
 	<iframe id="output"></iframe>
 </div>
-<style>
+<textarea hidden="" id="canvas-js">$canvasjs</textarea>
+<script src="/dev/runcanvas.js"></script>
 	#cntrls { text-align: justify }
 	#cntrls::after {
 		content: '';
@@ -28,7 +29,8 @@
 		width: 100%;
 	}
 </style>
-<script>
+<textarea hidden="" id="canvas-js">$canvasjs</textarea>
+<script src="/dev/runcanvas.js"></script>
 	var footerOff = true,
 		noPageOverflow = 520,
 		htmlTA = document.getElementById('html');
