--- a/html/learn/web/basic-elements/1.html
+++ b/html/learn/web/basic-elements/1.html
@@ -30,31 +30,4 @@ Paragraphs - Basic Elements
 &lt;/html></textarea>
 	<iframe id="output"></iframe>
 </div>
-<script>
-	var footerOff = true,
-		noPageOverflow = 520,
-		htmlTA = document.getElementById('html'),
-		runtTimeout;
-	function run() {
-		document.getElementById('output').src = 'data:application/xhtml+xml; charset=utf-8,' + htmlTA.value;
-	}
-	run();
-	function beforeRun() {
-		clearTimeout(runTimeout);
-		runTimeout = setTimeout(run, 100);
-	}
-	htmlTA.addEventListener('keyup', beforeRun);
-	htmlTA.addEventListener('keydown', beforeRun);
-	htmlTA.addEventListener('keypress', beforeRun);
-	document.getElementById('check').onclick = function() {
-		var doc = new DOMParser().parseFromString(document.getElementById('html').value, 'application/xhtml+xml');
-		if (doc.body &amp;&amp; doc.body.getElementsByTagName('p').length) {
-			document.getElementById('passed').classList.add('show');
-			document.getElementById('failed').classList.remove('show');
-		} else {
-			document.getElementById('failed').classList.add('show');
-			document.getElementById('passed').classList.remove('show');
-		}
-		document.getElementById('text-inner').scrollTop = document.getElementById('text-inner').scrollHeight;
-	};
-</script>
+<script src="/learn/course.js" async=""></script>
