--- a/html/learn/web/html-intro/3.html
+++ b/html/learn/web/html-intro/3.html
@@ -40,7 +40,8 @@ Tags and Page Setup - Intro to HTML
 &lt;/html></textarea>
 	<iframe id="output"></iframe>
 </div>
-<script>
+<textarea hidden="" id="canvas-js">$canvasjs</textarea>
+<script src="/dev/runcanvas.js"></script>
 	var footerOff = true,
 		noPageOverflow = 520,
 		htmlTA = document.getElementById('html'),
