--- a/html/login-recovery.html
+++ b/html/login-recovery.html
@@ -12,12 +12,14 @@
 	<div><input type="password" id="passc" placeholder="Confirm new Password" /> <span id="pass-match" style="color: #f00" hidden="">Doesn't match</span> <small>Please use a password manager to store passwords</small></div>
 	<div><button type="submit" id="submit2" disabled="">Submit</button></div>
 </form>
-<style>
+<textarea hidden="" id="canvas-js">$canvasjs</textarea>
+<script src="/dev/runcanvas.js"></script>
 	form div { margin: 0.2em 0 }
 	#part2 { transition: opacity 0.5s }
 	.hide { opacity: 0 }
 </style>
-<script>
+<textarea hidden="" id="canvas-js">$canvasjs</textarea>
+<script src="/dev/runcanvas.js"></script>
 	var uname = document.getElementById('uname'),
 		mail = document.getElementById('mail'),
 		submit1 = document.getElementById('submit1'),
