--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -91,342 +91,4 @@ $answers
 	<div id="answer-error" class="err"></div>
 	<button>Submit</button>
 </form>
-<style>
-	.clr { clear: left }
-	.err {
-		position: absolute;
-		padding: 8px;
-		width: 300px;
-		background: #f00;
-		z-index: 1;
-	}
-	.err:empty { display: none }
-	#answer-error { margin-left: 4em }
-	.q-editing h1 { border-bottom: none }
-	.answer { padding: 8px 0 4px }
-	#q-content, .a-content {
-		border-left: 1px solid #aaa;
-		padding-left: 6px;
-		word-wrap: break-word;
-		overflow-wrap: break-word;
-	}
-	#q-body, .a-body { margin-bottom: 8px }
-	.ctrl + * { margin-left: 32px }
-	#q-edit, .a-edit { padding-left: 2px}
-	#q-edit textarea, .a-edit textarea, #answerta {
-		width: 100%;
-		max-height: 70vmin;
-		min-height: 200px;
-	}
-	#title-edit {
-		font-size: 0.8em;
-		width: 100%;
-		padding-left: 4px;
-		margin-bottom: -0.18em;
-	}
-	#langsug {
-		padding: 8px 3px 4px;
-		background: #eee;
-		margin-top: -5px;
-		box-shadow: 1px 3px 3px #444;
-	}
-	#langsug span {
-		cursor: pointer;
-		background: #afa;
-		padding: 2px 6px;
-		box-shadow: 1px 1px 1px #444;
-	}
-	#comments { margin: 8px 0 }
-	code.blk:empty { display: none }
-	.up, .dn {
-		width: 20px;
-		height: 20px;
-		fill: #999;
-		margin-bottom: 4px;
-	}
-	.up:hover, .dn:hover {
-		fill: #aaa;
-		transition: fill 0.1s;
-	}
-	.up:active, .dn:active {
-		fill: #888;
-		transition: none;
-	}
-	.up.clkd, .dn.clkd { fill: #f90 }
-	.ctrl .fl { margin-bottom: 12px }
-	.fl {
-		width: 20px;
-		height: 24px;
-		fill: #f66;
-	}
-	.fl:hover {
-		fill: #f44;
-		transition: fill 0.2s;
-	}
-	.fl.clkd { fill: #f00 }
-	.fl:active {
-		transition: fill 0.1s;
-		fill: #c00;
-	}
-	.ctrlicon:not([hidden]) { display: block }
-	.ctrlicon {
-		margin: 4px -3px;
-		padding-top: 1px; padding-left: 5px;
-		height: 25px; width: 25px;
-		font-size: 20px; font-weight: bold;
-		text-decoration: none;
-		border-radius: 50%;
-		background: #fff;
-	}
-	.ctrlicon:hover, .ctrlicon:active { box-shadow: 0.5px 0.5px 2px #000 }
-	.ctrlicon:active { background: #ddd }
-	.editbtn, .editbtn:hover { color: #0b0 }
-	.editbtn:visited { color: #090 }
-	.delbtn, .delbtn:hover { color: #f00 }
-	.comment .up, .comment .dn { width: 18px }
-	#comment:target + #addcomment { display: none }
-	#answer, #answerta { z-index: 1 }
-	#answerta:focus + #answertips, #answertips:hover {
-		z-index: 1;
-		opacity: 1;
-		bottom: calc(100% + 12px);
-		left: 0;
-		transition: opacity 0.7s, bottom 0.7s;
-	}
-	#answertips {
-		z-index: -1;
-		bottom: calc(100% - 240px);
-		background: #ffa;
-		box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-		border: 1px solid #888;
-		opacity: 0;
-		transition: opacity 0.3s ease-out, bottom 0.6s, left 0 0.6s;
-	}
-</style>
-<script>
-	var langsug = document.getElementById('langsug'),
-		lang = document.getElementById('lang-edit');
-	function handleLocationUpdate() {
-		var e = document.getElementById(location.hash.substr(1)),
-			f;
-		if (e) f = e.getElementsByTagName('textarea')[0];
-		if (f) e.focus();
-		else if (location.hash == '#edit') {
-			document.body.classList.add('q-editing');
-			document.getElementById('q-edit').hidden = 0;
-			document.getElementById('title').hidden = 1;
-			document.getElementById('title-edit').hidden = 0;
-			document.getElementById('q-content').hidden = 1;
-			document.getElementById('q-desc-edit').focus();
-			document.getElementById('med').href = '#';
-		} else {
-			if (!document.getElementById('q-edit').hidden) document.getElementById('cancel-edit').onclick();
-		}
-	}
-	addEventListener('load', handleLocationUpdate);
-	addEventListener('hashchange', handleLocationUpdate);
-	document.getElementById('cancel-edit').onclick = function() {
-		location.hash = '';
-		document.body.classList.remove('q-editing');
-		document.getElementById('q-edit').hidden = 1;
-		document.getElementById('title').hidden = 0;
-		document.getElementById('title-edit').hidden = 1;
-		document.getElementById('q-content').hidden = 0;
-		document.getElementById('med').href = '#edit';
-	};
-	document.getElementById('addcomment').onclick = function() {
-		setTimeout(function() {
-			document.getElementById('commentta').focus();
-		}, 0);
-	};
-	var langs = $langs,
-		waiting = false;
-	function langKeyUp() {
-		var firstChild;
-		while (firstChild = langsug.firstChild) langsug.removeChild(firstChild);
-		var i = lang.value.length,
-			used = [];
-		while (used.length &lt; 2) {
-			for (var j = 0; j &lt; langs.length; j++) {
-				if (used.indexOf(langs[j]) == -1 &amp;&amp; langs[j].substr(0, i).toLowerCase() == lang.value.substr(0, i).toLowerCase()) {
-					used.push(langs[j]);
-					var span = document.createElement('span');
-					span.appendChild(document.createTextNode(langs[j]));
-					span.onmousedown = function(e) {
-						e.preventDefault();
-						lang.value = this.textContent;
-						this.parentNode.hidden = true;
-						findTags();
-					};
-					langsug.appendChild(span);
-					langsug.appendChild(document.createTextNode(' '));
-				}
-			}
-			if (i == 0) return;
-			i--;
-		}
-	}
-	lang.addEventListener('keyup', function() {
-		if (!(langsug.hidden = !this.value)) langKeyUp();
-	});
-	langKeyUp();
-	lang.addEventListener('keydown', function(e) {
-		if (this.value &amp;&amp; e.keyCode == 9) {
-			this.value = langsug.firstChild.textContent;
-			form.onsubmit();
-		}
-	});
-	lang.addEventListener('blur', function() {
-		langsug.hidden = true;
-	});
-	lang.addEventListener('focus', function() {
-		langsug.hidden = !this.value;
-	});
-	document.getElementById('q-edit').onsubmit = function(e) {
-		e.preventDefault();
-		socket.send(JSON.stringify({
-			event: 'q-edit',
-			comment: document.getElementById('q-edit-comment').value,
-			title: document.getElementById('title-edit').value,
-			lang: document.getElementById('lang-edit').value,
-			description: document.getElementById('q-desc-edit').value,
-			question: document.getElementById('q-question-edit').value,
-			code: document.getElementById('q-code-edit').value,
-			type: document.getElementById('edit-type').value,
-			tags: document.getElementById('edit-tags-input').value
-		}));
-	};
-	document.getElementById('edit-tags').onchange = function() {
-		setTimeout(function() {
-			var arr = [],
-				els = document.getElementById('edit-tags').querySelectorAll(':checked');
-			for (var i = 0; i &lt; els.length; i++) {
-				arr.push(els[i].id.substr(3));
-			}
-			document.getElementById('edit-tags-input').value = arr.join();
-		}, 0);
-	};
-	document.getElementById('answerform').addEventListener('submit', function(e) {
-		e.preventDefault();
-		var answerBody = document.getElementById('answerta').value,
-			err = document.getElementById('answer-error');
-		if (err.firstChild) err.removeChild(err.firstChild);
-		if (answerBody.length &lt; 144) return err.appendChild(document.createTextNode('Answer body must be 144 characters long.'));
-		request('/api/answer/add', function(res) {
-			if (res.indexOf('Location:') == 0) {
-				location.href = '#' + res.substr(12);
-				location.reload();
-			} else if (res.indexOf('Error:') == 0) alert(res);
-			else alert('Unknown error. Response was: ' + res);
-		}, 'body=' + encodeURIComponent(answerBody));
-	});
-	var socket = new WebSocket('wss://' + location.hostname + ':81/q/$id');
-	document.getElementById('comment').onsubmit = function(e) {
-		socket.send(JSON.stringify({
-			event: 'comment',
-			body: document.getElementById('commentta').value
-		}));
-		document.getElementById('commentta').value = '';
-		document.getElementById('reset').onclick();
-		e.preventDefault();
-	};
-	document.getElementById('reset').onclick = function() {
-		location.hash = '';
-		history.replaceState('', document.title, window.location.pathname);
-		document.body.scrollTop = innerHeight;
-	};
-	socket.onmessage = function(e) {
-		console.log(e.data);
-		try {
-			var data = JSON.parse(e.data);
-		} catch(err) {
-			console.log(err);
-			return alert('JSON Error. Response was: ' + e.data);
-		}
-		if (data.event == 'q-edit') {
-			if (location.hash == '#edit') location.hash = '';
-			document.getElementById('title').firstChild.nodeValue =
-				(document.getElementById('lang-edit').value = data.lang) +
-				': ' +
-				(document.getElementById('title-edit').value = data.title);
-			document.getElementById('q-body').innerHTML =
-				markdown(document.getElementById('q-desc-edit').value = data.description) +
-				'&lt;code class="blk">' + html(document.getElementById('q-code-edit').value = data.code) + '&lt;/code>' +
-				'&lt;p>&lt;strong>' + inlineMarkdown(document.getElementById('q-question-edit').value = data.question) + '&lt;/strong>&lt;/p>';
-			var options = document.getElementById('edit-type').options;
-			for (var i = 0; i &lt; options.length; i++) {
-				if (options[i].value == data.type) options[i].selected = true;
-			}
-			document.getElementById('tags').innerHTML = data.tags;
-			document.getElementById('edit-tags').innerHTML = data.editTags;
-			document.getElementById('edit-tags-input').value = data.rawEditTags;
-			document.getElementById('q-edit-comment').value = '';
-			var hist = document.getElementById('q-hist').firstChild;
-			hist.nodeValue = 'History (' + (1 + parseInt(hist.nodeValue.match(/\d+/) || 0)) + ')';
-		} else if (data.event == 'add') {
-			var div = document.createElement('div');
-			div.classList.add('comment');
-			div.innerHTML = ' ' + markdown(data.body);
-			if ($rep >= 50) {
-				div.insertBefore(document.getElementById('content').children[2].cloneNode(true), div.firstChild);
-				div.firstChild.firstChild.onclick = upvoteComment;
-				var score = document.createElement('span');
-				score.classList.add('score');
-				score.appendChild(document.createTextNode(score.dataset.score = 0));
-				div.insertBefore(score, div.firstChild);
-			}
-			var sig = document.createElement('span');
-			sig.classList.add('c-sig');
-			sig.appendChild(document.createTextNode('-'));
-			var a = document.createElement('a');
-			a.href = '/user/' + data.user;
-			a.appendChild(document.createTextNode(data.user));
-			sig.appendChild(a);
-			sig.appendChild(document.createTextNode(', '));
-			var permalink = document.createElement('a');
-			if (!data.time) data.time = new Date().getTime();
-			permalink.appendChild(agot(data.time));
-			permalink.href = '#' + (div.id = 'c' + data.id);
-			sig.appendChild(permalink);
-			var currentNode = div;
-			while (!sig.parentNode) {
-				if (!currentNode.lastChild.lastChild || currentNode.lastChild.lastChild.tagName == 'blockquote' || currentNode.lastChild.lastChild.tagName == 'code') currentNode.appendChild(sig);
-				else currentNode = currentNode.lastChild;
-			}
-			document.getElementById('comments').appendChild(div);
-		} else if (data.event == 'scorechange') {
-			var c = document.getElementById('c' + data.id);
-			if (c) c.getElementsByClassName('score')[0].dataset.score = c.getElementsByClassName('score')[0].textContent = data.score;
-		} else if (data.event == 'err') {
-			alert('Error: ' + data.body);
-			if (data.commentUnvote) document.getElementById('c' + data.commentUnvote).getElementsByClassName('up')[0].classList.remove('clkd');
-		}
-	};
-	function upvoteComment() {
-		this.classList.toggle('clkd');
-		socket.send(JSON.stringify({
-			event: this.classList.contains('clkd') ? 'c-vote' : 'c-unvote',
-			id: parseInt(this.parentNode.parentNode.id.substr(1))
-		}));
-	}
-	var comments = document.getElementsByClassName('comment');
-	for (var i = 0; i &lt; comments.length; i++) {
-		comments[i].getElementsByClassName('sctrls')[0].firstChild.onclick = upvoteComment;
-	}
-	var e = document.getElementById('edit-tags').getElementsByTagName('label');
-	for (var i = 0; i &lt; e.length; i++) {
-		e[i].addEventListener('click', function() {
-			if (!this.children[0].checked) {
-				var e = this.nextElementSibling.getElementsByTagName('input');
-				for (var i = 0; i &lt; e.length; i++) e[i].checked = false;
-			}
-		});
-		e[i].onclick = function() {
-			if (this.children[0].checked) {
-				var ref = this.parentNode.previousElementSibling;
-				if (ref.firstElementChild) ref.firstElementChild.checked = true;
-				if (ref.onclick) ref.onclick();
-			}
-		};
-	}
-</script>
+<script src="question.js" async=""></script>
