--- a/html/dev/html.html
+++ b/html/dev/html.html
@@ -33,468 +33,12 @@
 		<button type="submit">Post</button>
 		<button type="reset" id="reset">Cancel</button>
 	</form>
-	<a id="addcomment" href="#comment" style="font-weight: normal" class="grey ib umar">Add comment</a>
+	<a id="addcomment" href="#comment" class="grey ib umar">Add comment</a>
 	$forks
 </section>
 <span class="sctrls"><svg class="up" xmlns="http://www.w3.org/2000/svg"><polygon points="7,-1 0,11 5,11 5,16 9,16 9,11 14,11" /></svg><svg class="fl" xmlns="http://www.w3.org/2000/svg"><polygon points="0,0 13,0 13,8 4,8 4,16 0,16" /></svg></span>
-<style>
-	*::-webkit-input-placeholder { color: #888 }
-	*::-moz-placeholder { color: #999 }
-	html, #content, #footer, #main { background: #000 }
-	#main { padding: 0 }
-	#content { padding: 0 4px }
-	#main a:hover { color: #4ff }
-	#main a:active { color: #06f }
-	#main :not(input):not(button):not(.red):not(a), #main a:not(:hover):not(:active):not(.red), #footer * { color: #fff }
-	#meta {
-		clear: both;
-		padding: 4px;
-		margin-top: 8px;
-		background: rgba(255, 255, 255, .8);
-		color: #000;
-	}
-	#main textarea {
-		color: #fff;
-		background: #000;
-		font-family: monospace;
-		font-size: 1rem;
-		width: 100%;
-		margin: 4px 0;
-	}
-	#main textarea:first-child { margin-top: 0 }
-	#edit-title {
-		width: 400px;
-		max-width: 100%;
-	}
-	#main textarea, #output {
-		max-width: 100%;
-		border: 1px solid #fff;
-		outline: none;
-		white-space: pre;
-	}
-	#output {
-		width: 100%;
-		height: calc(100% - 5px);
-	}
-	#outputbox { height: calc(100% - 24px) }
-	#left { height: 900px }
-	#right { height: 400px }
-	@media (min-width: 700px) {
-		.row { height: calc(100% - 2em) }
-		#left, #right {
-			height: 100%;
-			margin-bottom: 0;
-			max-width: 50%;
-		}
-		#left { float: left }
-		#right { float: right }
-	}
-	textarea {
-		height: calc(33.33% - 2px);
-		resize: none;
-	}
-	#save.progress {
-		cursor: progress;
-		color: #4ff;
-	}
-	#up, #dn {
-		width: 22px;
-		height: 24px;
-		fill: #777;
-	}
-	#up:hover, #dn:hover {
-		fill: #888;
-		transition: fill 0.1s;
-	}
-	#up:active, #dn:active {
-		fill: #666;
-		transition: none;
-	}
-	#up.clkd, #dn.clkd {
-		fill: #f90;
-	}
-	#fl {
-		width: 20px;
-		height: 24px;
-		fill: #f44;
-		margin-left: 12px;
-	}
-	#fl:hover {
-		fill: #f55;
-		transition: fill 0.2s;
-	}
-	#fl.clkd {
-		fill: #f00;
-	}
-	#fl:active {
-		transition: fill 0.1s;
-		fill: #c00;
-	}
-	#comment:target + #addcomment { display: none }
-	.up {
-		width: 18px;
-		height: 20px;
-		fill: #888;
-	}
-	.up:hover {
-		fill: #999;
-		transition: fill 0.1s;
-	}
-	.up:active {
-		fill: #777;
-		transition: none;
-	}
-	.up.clkd { fill: #f90 }
-	.fl {
-		width: 20px;
-		height: 20px;
-		fill: #f88;
-	}
-	.fl:hover {
-		fill: #f66;
-		transition: fill 0.2s;
-	}
-	.fl.clkd { fill: #f00 }
-	.fl:active {
-		transition: fill 0.1s;
-		fill: #c00;
-	}
-</style>
-<script>
-	var footerOff = true,
-		noPageOverflow = 800,
-		pageOverflowMobile = 700,
-		mainBottomPad = 60,
-		mainContentEl = document.getElementById('main'),
-		htmle = document.getElementById('html'),
-		css = document.getElementById('css'),
-		js = document.getElementById('js'),
-		save = document.getElementById('save'),
-		fork = document.getElementById('fork'),
-		up = document.getElementById('up'),
-		dn = document.getElementById('dn');
-	var p = '';
-	function createCode() {
-		return '&lt;!DOCTYPE html>&lt;html>&lt;body>' + htmle.value + '&lt;style>' + css.value + '&lt;/style>&lt;script>alert=prompt=confirm=null;' + js.value + '&lt;/script>&lt;/body>&lt;/html>';
-	}
-	function run(f) {
-		if (document.getElementById('autorun').checked) {
-			if (!save.classList.contains('progress')) save.textContent = 'Save';
-			p = document.getElementById('output').srcdoc = createCode();
-		}
-	}
-	htmle.onkeypress = function(e) {
-		var oldSelectionStart = this.selectionStart;
-		if (e.keyCode == 13) {
-			if (e.metaKey) return document.getElementById('title').dispatchEvent(new MouseEvent('click'));
-			var tabs = this.value.substr(0, oldSelectionStart)
-				.split('\n')[this.value.substr(0, oldSelectionStart).split('\n').length - 1]
-				.split('\t').length
-				- (
-					(false/* Parse? */)
-					? 0
-					: 1
-				);
-			this.value = this.value.substr(0, this.selectionStart) + '\n' + '\t'.repeat(tabs) + this.value.substr(this.selectionStart);
-			this.selectionStart = ++oldSelectionStart + tabs;
-			this.selectionEnd = this.selectionStart;
-			e.preventDefault();
-		} else if (e.keyCode == 34) {
-			if (this.value[this.selectionStart] != '"') this.value = this.value.substr(0, this.selectionStart) + '""' + this.value.substr(this.selectionStart);
-			this.selectionEnd = this.selectionStart = ++oldSelectionStart;
-			e.preventDefault();
-		} else if (e.keyCode == 39) {
-			if (this.value[this.selectionStart] != "'") this.value = this.value.substr(0, this.selectionStart) + "''" + this.value.substr(this.selectionStart);
-			this.selectionEnd = this.selectionStart = ++oldSelectionStart;
-			e.preventDefault();
-		}
-		onbeforeunload = function() {
-			return 'You have unsaved code.';
-		};
-	};
-	htmle.onkeydown = css.onkeydown = js.onkeydown = function(e) {
-		if (e.keyCode == 8 &amp;&amp; this.selectionStart == this.selectionEnd) {
-			if (
-				(this.value[this.selectionStart - 1] == '"' &amp;&amp; this.value[this.selectionStart] == '"') ||
-				(this.value[this.selectionStart - 1] == "'" &amp;&amp; this.value[this.selectionStart] == "'") ||
-				(this.value[this.selectionStart - 1] == '(' &amp;&amp; this.value[this.selectionStart] == ')') ||
-				(this.value[this.selectionStart - 1] == '[' &amp;&amp; this.value[this.selectionStart] == ']') ||
-				(this.value[this.selectionStart - 1] == '{' &amp;&amp; this.value[this.selectionStart] == '}')
-			) {
-				var oldSelectionStart = this.selectionStart;
-				this.value = this.value.substr(0, this.selectionStart - 1) + this.value.substr(this.selectionStart + 1);
-				this.selectionEnd = --oldSelectionStart;
-				e.preventDefault();
-			}
-		}
-	};
-	css.onkeypress = js.onkeypress = function(e) {
-		var oldSelectionStart = this.selectionStart;
-		var pairChars = {};
-		pairChars[40] = '()';
-		pairChars[91] = '[]';
-		pairChars[123] = '{}';
-		var endChars = {};
-		endChars[41] = ')';
-		endChars[93] = ']';
-		endChars[125] = '}';
-		if (e.keyCode == 13) {
-			if (e.metaKey) return document.getElementById('title').dispatchEvent(new MouseEvent('click'));
-			var cut = (this.value.substr(0, oldSelectionStart).match(/\s+$/) || '').length;
-			this.value = this.value.substr(0, oldSelectionStart - cut) + this.value.substr(oldSelectionStart);
-			oldSelectionStart = this.selectionStart = this.selectionEnd = oldSelectionStart - cut;
-			if (this.value[oldSelectionStart - 1] == ',') this.eIndent = true;
-			var tabs = this.value.substr(0, oldSelectionStart)
-				.split('\n')[this.value.substr(0, oldSelectionStart).split('\n').length - 1]
-				.split('\t').length
-				- (
-					('{([:,'.indexOf(this.value[oldSelectionStart - 1]) + 1)
-					? 0
-					: (
-						this.value[oldSelectionStart - 1] == ';' &amp;&amp; this.eIndent
-						? (this.eIndent = false || 2)
-						: 1
-					)
-				);
-			this.value = this.value.substr(0, this.selectionStart) + '\n' + '\t'.repeat(tabs) + ('{([:,'.indexOf(this.value[oldSelectionStart - 1]) == -1 ? '' : '\n' + '\t'.repeat(tabs - 1)) + this.value.substr(this.selectionStart);
-			this.selectionEnd = this.selectionStart = ++oldSelectionStart + tabs;
-			e.preventDefault();
-		} else if (e.keyCode == 34) {
-			if (this.value[this.selectionStart] != '"') this.value = this.value.substr(0, this.selectionStart) + '""' + this.value.substr(this.selectionStart);
-			this.selectionEnd = this.selectionStart = ++oldSelectionStart;
-			e.preventDefault();
-		} else if (e.keyCode == 39) {
-			if (this.value[this.selectionStart] != "'") this.value = this.value.substr(0, this.selectionStart) + "''" + this.value.substr(this.selectionStart);
-			this.selectionEnd = this.selectionStart = ++oldSelectionStart;
-			e.preventDefault();
-		} else if (pairChars[e.keyCode]) {
-			this.value = this.value.substr(0, this.selectionStart) + pairChars[e.keyCode] + this.value.substr(this.selectionStart);
-			this.selectionEnd = ++oldSelectionStart;
-			e.preventDefault();
-		} else if (endChars[e.keyCode] &amp;&amp; this.value[this.selectionStart] == endChars[e.keyCode]) {
-			this.selectionStart = ++this.selectionEnd;
-			e.preventDefault();
-		} else if (e.keyCode == 44) {
-			this.value = this.value.substr(0, this.selectionStart) + ', ' + this.value.substr(this.selectionStart);
-			this.selectionEnd = this.selectionStart = oldSelectionStart + 2;
-			e.preventDefault();
-		}
-		onbeforeunload = function() {
-			return 'You have unsaved code.';
-		};
-	};
-	htmle.oninput = css.oninput = js.oninput = run;
-	run();
-	addEventListener('keypress', function(e) {
-		if (e.keyCode == 13 &amp;&amp; e.metaKey) {
-			e.preventDefault();
-			document.getElementById('title').dispatchEvent(new MouseEvent('click'));
-		} else if (e.keyCode == 115 &amp;&amp; e.metaKey) {
-			e.preventDefault();
-			var target = e.shiftKey ? fork : save;
-			if (target) target.dispatchEvent(new MouseEvent('click'));
-		}
-	});
-	save.onclick = function() {
-		var e = this;
-		if (e.classList.contains('progress')) return;
-		e.classList.add('progress');
-		var savingTimeout = setTimeout(function() {
-			if (e.textContent == 'Save') e.textContent = 'Saving…';
-		}, 200);
-		request('/api/program/save?type=2', function(res) {
-			if (res.indexOf('Error') == 0) {
-				clearTimeout(savingTimeout);
-				alert(res);
-				e.textContent = 'Save';
-			} else if (res.indexOf('Location') == 0) {
-				onbeforeunload = null;
-				location.href = res.split(' ')[1];
-			} else if (res == 'Success') {
-				onbeforeunload = null;
-				e.textContent = 'Saved';
-				document.getElementById('updated').setAttribute('datetime', new Date().toISOString());
-			} else {
-				clearTimeout(savingTimeout);
-				alert('Unknown error. Response was: ' + res);
-			}
-			e.classList.remove('progress');
-		}, 'html=' + encodeURIComponent(htmle.value) + '&amp;css=' + encodeURIComponent(css.value) + '&amp;js=' + encodeURIComponent(js.value));
-	};
-	(document.getElementById('fork') || {}).onclick = function() {
-		var e = this;
-		if (e.classList.contains('progress')) return;
-		e.classList.add('progress');
-		e.textContent = 'Saving…';
-		var e = e.previousSibling.previousSibling;
-		e.hidden = e.previousSibling.previousSibling.hidden = true;
-		request('/api/program/save?type=2&amp;fork=1', function(res) {
-			if (res.indexOf('Error') == 0) {
-				e.hidden = false;
-				e = e.nextSibling.nextSibling;
-				e.hidden = false;
-				e.nextSibling.nextSibling.textContent = 'Fork';
-				alert(res);
-			} else if (res.indexOf('Location') == 0) {
-				onbeforeunload = null;
-				location.href = res.split(' ')[1];
-			} else alert('Unknown error. Response was: ' + res);
-			e.classList.remove('progress');
-		}, 'html=' + encodeURIComponent(htmle.value) + '&amp;css=' + encodeURIComponent(css.value) + '&amp;js=' + encodeURIComponent(js.value));
-	};
-	if (document.getElementById('meta')) {
-		if ($mine) {
-			document.getElementById('title').onclick = function() {
-				this.hidden = true;
-				var edit = document.getElementById('edit-title');
-				edit.hidden = false;
-				edit.focus();
-			};
-			document.getElementById('edit-title').onblur = function() {
-				request('/api/program/edit-title', function(res) {
-					var edit = document.getElementById('edit-title');
-					if (res.indexOf('Error') == 0) {
-						alert(res);
-						edit.value = document.getElementById('title').textContent;
-					} else if (res == 'Success') {
-						edit.hidden = true;
-						var title = document.getElementById('title');
-						document.title = (title.textContent = edit.value.substr(0, 92) || 'Untitled') + ' | Programs | DevDoodle';
-						if (!edit.value) edit.value = 'Untitled';
-						title.hidden = false;
-					} else alert('Unknown error. Response was: ' + res);
-				}, 'title=' + encodeURIComponent(this.value));
-			};
-			document.getElementById('edit-title').onkeypress = function(e) {
-				if (e.keyCode == 13) this.onblur.call(this);
-			};
-		}
-		up.onclick = function() {
-			request('/api/program/vote', function(res) {
-				if (res.indexOf('Error') == 0) alert(res);
-				else if (res == 'Success') {
-					document.getElementsByClassName('user-$op-name')[0].getElementsByClassName('rep')[0].textContent -= (up.classList.contains('clkd') ? 1 : 0) - (dn.classList.contains('clkd') ? 1 : -1);
-					up.classList.toggle('clkd');
-					dn.classList.remove('clkd');
-				} else alert('Unknown error. Response was: ' + res);
-			}, 'val=' + (this.classList.contains('clkd') ? 0 : 1));
-		};
-		dn.onclick = function() {
-			request('/api/program/vote', function(res) {
-				if (res.indexOf('Error') == 0) alert(res);
-				else if (res == 'Success') {
-					document.getElementsByClassName('user-$op-name')[0].getElementsByClassName('rep')[0].textContent -= (up.classList.contains('clkd') ? 1 : 0) - (dn.classList.contains('clkd') ? 1 : -1);
-					dn.classList.toggle('clkd');
-					up.classList.remove('clkd');
-				} else alert('Unknown error. Response was: ' + res);
-			}, 'val=' + (this.classList.contains('clkd') ? 0 : -1));
-		};
-		document.getElementById('addcomment').onclick = function() {
-			setTimeout(function() {
-				document.getElementById('commentta').focus();
-			}, 0);
-		};
-		var socket = new WebSocket('wss://' + location.hostname + ':81/dev/$id');
-		document.getElementById('comment').onsubmit = function(e) {
-			socket.send(JSON.stringify({
-				event: 'post',
-				body: document.getElementById('commentta').value
-			}));
-			document.getElementById('commentta').value = '';
-			document.getElementById('reset').onclick();
-			e.preventDefault();
-		};
-		document.getElementById('reset').onclick = function() {
-			location.hash = '';
-			history.replaceState('', document.title, window.location.pathname);
-		};
-		socket.onmessage = function(e) {
-			console.log(e.data);
-			try {
-				var data = JSON.parse(e.data);
-			} catch(err) {
-				console.log(err);
-				return alert('JSON Error. Response was: ' + e.data);
-			}
-			if (data.event == 'add') {
-				var div = document.createElement('div');
-				div.classList.add('comment');
-				div.innerHTML = ' ' + markdown(data.body);
-				if ($rep >= 50) {
-					div.insertBefore(document.getElementById('meta').nextElementSibling.cloneNode(true), div.firstChild);
-					div.firstChild.firstChild.onclick = upvoteComment;
-					var score = document.createElement('span');
-					score.classList.add('score');
-					score.appendChild(document.createTextNode(score.dataset.score = 0));
-					div.insertBefore(score, div.firstChild);
-				}
-				var sig = document.createElement('span');
-				sig.classList.add('c-sig');
-				sig.appendChild(document.createTextNode('-'));
-				var a = document.createElement('a');
-				a.href = '/user/' + data.user;
-				a.appendChild(document.createTextNode(data.user))
-				sig.appendChild(a);
-				sig.appendChild(document.createTextNode(', '));
-				var permalink = document.createElement('a');
-				if (!data.time) data.time = new Date().getTime();
-				permalink.appendChild(agot(data.time));
-				permalink.href = '#' + (div.id = 'c' + data.id);
-				sig.appendChild(permalink);
-				var currentNode = div;
-				while (!sig.parentNode) {
-					if (!currentNode.lastChild.lastChild || currentNode.lastChild.lastChild.tagName == 'blockquote' || currentNode.lastChild.lastChild.tagName == 'code') currentNode.appendChild(sig);
-					else currentNode = currentNode.lastChild;
-				}
-				document.getElementById('comments').appendChild(div);
-				div.scrollIntoView(true);
-			} else if (data.event == 'scorechange') {
-				var c = document.getElementById('c' + data.id);
-				if (c) c.getElementsByClassName('score')[0].dataset.score = c.getElementsByClassName('score')[0].textContent = data.score;
-			} else if (data.event == 'err') alert('Error: ' + data.body);
-		};
-		socket.onclose = function() {
-			var ta = document.getElementById('commentta');
-			if (ta.disabled) return;
-			ta.blur();
-			ta.disabled = true;
-			var warning = document.createElement('div');
-			warning.className = 'connection-error';
-			warning.appendChild(document.createTextNode('Connection error. '));
-			var link = document.createElement('a');
-			link.appendChild(document.createTextNode('Reload?'));
-			link.href = '';
-			warning.appendChild(link);
-			var addcomment = document.getElementById('addcomment');
-			addcomment.parentNode.insertAfter(warning, addcomment);
-			addcomment.hidden = true;
-			setInterval(function() {
-				if (socket.readyState == 1) return location.reload(true);
-				socket = new WebSocket('wss://' + location.hostname + ':81/dev/$id');
-			}, 5000);
-		};
-		var deletebutton = document.getElementById('delete');
-		if (deletebutton) {
-			deletebutton.onclick = function() {
-				if (confirm('Do you want to delete this program?')) {
-					request('/api/program/delete', function(res) {
-						if (res.indexOf('Error') == 0) alert(res);
-						else if (res == 'Success') location.reload();
-						else alert('Unknown error. Response was: ' + res);
-					});
-				}
-			};
-		}
-		function upvoteComment() {
-			this.classList.toggle('clkd');
-			socket.send(JSON.stringify({
-				event: this.classList.contains('clkd') ? 'vote' : 'unvote',
-				id: parseInt(this.parentNode.parentNode.id.substr(1))
-			}));
-		}
-		var comments = document.getElementsByClassName('comment');
-		for (var i = 0; i &lt; comments.length; i++) {
-			comments[i].getElementsByClassName('sctrls')[0].firstChild.onclick = upvoteComment;
-		}
-	}
-</script>
+<input type="hidden" id="mine" value="$mine" />
+<input type="hidden" id="user" value="$op-name" />
+<input type="hidden" id="id" value="$id" />
+<input type="hidden" id="rep" value="$rep" />
+<script src="/dev/runhtml.js"></script>
