--- a/html/learn/web/basic-elements/3.html
+++ b/html/learn/web/basic-elements/3.html
@@ -29,7 +29,8 @@ Comments - Basic Elements
 &lt;/html></textarea>
 	<iframe id="output"></iframe>
 </div>
-<script>
+<textarea hidden="" id="canvas-js">$canvasjs</textarea>
+<script src="/dev/runcanvas.js"></script>
 	var footerOff = true,
 		noPageOverflow = 520,
 		htmlTA = document.getElementById('html'),
