--- a/html/learn/web/html-intro/4.html
+++ b/html/learn/web/html-intro/4.html
@@ -47,7 +47,8 @@ Your first webpage - Intro to HTML
 &lt;/html></textarea>
 	<iframe id="output"></iframe>
 </div>
-<script>
+<textarea hidden="" id="canvas-js">$canvasjs</textarea>
+<script src="/dev/runcanvas.js"></script>
 	var footerOff = true,
 		noPageOverflow = 520,
 		htmlTA = document.getElementById('html'),
